--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Clean & Modern</title>
+    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
