--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Out - Clean & Modern</title>
+    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
     {% tailwind_css %}
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
