--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
     {% tailwind_css %}
 </head>
 <body class="bg-gray-50 min-h-screen flex items-center justify-center p-4">
