--- a/templates/chema/delete_comment.html
+++ b/templates/chema/delete_comment.html
@@ -5,7 +5,7 @@
     <div class="card p-3">
         <h2>Delete Comment</h2>
             <p>Are you sure you want to delete this comment?</p>
-            <p><strong>Comment by:</strong> {{ comment.author.username }}</p>
+            <p><strong>Comment by:</strong> {{ comment.author.full_name }}</p>
             <p><strong>Content:</strong> {{ comment.content }}</p>
             <form method="post">
                 {% csrf_token %}
