--- a/templates/chema/partials/all_comments_modal.html
+++ b/templates/chema/partials/all_comments_modal.html
@@ -30,7 +30,7 @@
 
           <div class="flex-1">
             <div class="flex justify-between">
-              <div class="font-bold text-sm">{{ comment.author }}</div>
+              <div class="font-bold text-sm">{{ comment.author.full_name }}</div>
               <div class="text-xs text-gray-400">{{ comment.created_at|timesince }}</div>
             </div>
 
@@ -66,7 +66,7 @@
                     </div>
                   </div>
                   <div>
-                    <span class="font-bold text-xs">{{ reply.author }}</span>
+                    <span class="font-bold text-xs">{{ reply.author.full_name }}</span>
                     <p class="text-gray-600">{{ reply.content }}</p>
                   </div>
                 </div>
