--- a/templates/chema/remove_reply.html
+++ b/templates/chema/remove_reply.html
@@ -5,7 +5,7 @@
     <div class="container mt-5 pt-5">
         <h2>Remove Reply Comment</h2>
         <p>Are you sure you want to remove this reply comment?</p>
-        <p><strong>Reply by:</strong> {{ reply.author.username }}</p>
+        <p><strong>Reply by:</strong> {{ reply.author.full_name }}</p>
         <p><strong>Content:</strong> {{ reply.content }}</p>
         
         <form method="post">
