--- a/templates/chema/view_replies.html
+++ b/templates/chema/view_replies.html
@@ -8,8 +8,10 @@
     <ul class="list-unstyled">
         {% for reply in replies %}
             <li>
-                <img class="rounded-circle account-img" width="30" src="{{ reply.author.profile.profile_pic.url }}">
-                <strong>{{ reply.author.username }}</strong>
+                {% if reply.author.profile_picture %}
+                    <img class="rounded-circle account-img" width="30" src="{{ reply.author.profile_picture.url }}">
+                {% endif %}
+                <strong>{{ reply.author.full_name }}</strong>
                 <small class="text-muted">{{ reply.created_at }}:</small>
                 <div class="mb-2 bg-warning-subtle text-emphasis-warning p-3 mb-3 shadow p-3 mb-1 bg-body-tertiary rounded">
                     <small class="comment">{{ reply.content }}</small>
