--- a/templates/partials/nav2.html
+++ b/templates/partials/nav2.html
@@ -67,22 +67,28 @@
     <!-- Main Navigation Links -->
     <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-user">
       <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent">
-        {% if active_group %}
-          
-        {% endif %}
+        <li>
+          <a href="{% url 'home' %}" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Home</a>
+        </li>
+        <li>
+          <a href="{% url 'my_groups' %}" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">My Groups</a>
+        </li>
+        <li>
+          <a href="{% url 'contributions_list' %}" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Contributions</a>
+        </li>
         <li>
           <button onclick="deceased_modal.showModal()"
-             class="block py-3 px-4 text-gray-900 bg-gray-100 rounded hover:bg-gray-200 md:hover:text-blue-500 md:p-0">Deceased</button>
+             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Deceased</button>
         </li>
         {% if active_group %}
           <li>
             <a href="{% url 'group_list' %}" 
-               class="block py-2 px-3 text-gray-900 bg-gray-200 rounded hover:bg-gray-200 md:hover:text-blue-500 md:p-0">Join Group</a>
+               class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Join Group</a>
           </li>
         {% endif %}
         <li>
           <button onclick="create_group_modal.showModal()"
-             class="py-2 px-3 text-gray-900 bg-gray-200 rounded hover:bg-gray-200 md:hover:text-blue-500 md:p-0">Create Group</button>
+             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Create Group</button>
         </li>
       </ul>
     </div>
