--- a/templates/user/update_deceased_status.html
+++ b/templates/user/update_deceased_status.html
@@ -4,7 +4,7 @@
 <div class="container d-flex mt-5 justify-content-center">
       
   <div>
-    <h3>Update Deceased Status for <strong class="text-success">{{ profile.user.username }}</strong></h3>
+    <h3>Update Deceased Status for <strong class="text-success">{{ profile.full_name }}</strong></h3>
         <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
