--- a/templates/condolence/partials/deceased_modal.html
+++ b/templates/condolence/partials/deceased_modal.html
@@ -18,8 +18,7 @@
     <form method="post" 
           hx-post="{% url 'deceased' %}" 
           hx-target="#deceased_modal"
-          hx-swap="outerHTML"
-          hx-on::after-request="if(event.detail.successful) { document.getElementById('deceased_modal').close(); window.location.reload(); }">
+          hx-swap="outerHTML">
       {% csrf_token %}
       
       {% if deceased_form.non_field_errors %}
