--- a/templates/partials/nav2.html
+++ b/templates/partials/nav2.html
@@ -91,19 +91,19 @@
     <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-user">
       <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent">
         <li>
-          <a href="{% url 'home' %}" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Home</a>
+          <a href="{% url 'home' %}" class="block py-2 px-3 rounded md:p-0 {% if request.resolver_match.url_name == 'home' %}text-blue-700 font-bold bg-blue-50 md:bg-transparent{% else %}text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700{% endif %}">Home</a>
         </li>
         <li>
-          <a href="{% url 'my_groups' %}" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">My Groups</a>
+          <a href="{% url 'my_groups' %}" class="block py-2 px-3 rounded md:p-0 {% if request.resolver_match.url_name == 'my_groups' %}text-blue-700 font-bold bg-blue-50 md:bg-transparent{% else %}text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700{% endif %}">My Groups</a>
         </li>
         <li>
-          <a href="{% url 'contributions_list' %}" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Contributions</a>
+          <a href="{% url 'contributions_list' %}" class="block py-2 px-3 rounded md:p-0 {% if request.resolver_match.url_name == 'contributions_list' %}text-blue-700 font-bold bg-blue-50 md:bg-transparent{% else %}text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700{% endif %}">Contributions</a>
         </li>
 
         {% if active_group %}
           <li>
             <a href="{% url 'group_list' %}" 
-               class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Join Group</a>
+               class="block py-2 px-3 rounded md:p-0 {% if request.resolver_match.url_name == 'group_list' %}text-blue-700 font-bold bg-blue-50 md:bg-transparent{% else %}text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700{% endif %}">Join Group</a>
           </li>
         {% endif %}
         <li>
