--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
             crossorigin="anonymous"></script>
 
     {% block extra_css %}{% endblock %}
+
 </head>
 
 <body class="bg-gray-100 min-h-screen font-sans text-gray-900 overflow-hidden">
@@ -63,11 +64,20 @@
     <!-- Create Contribution Modal -->
     {% include 'condolence/partials/create_contribution_modal.html' %}
     
+    <!-- Top Up Wallet Modal -->
+    {% include 'wallet/top_up_modal.html' %}
+    
     <!-- Add Admin Modal -->
    
     
    
 
     {% block extra_js %}{% endblock %}
+
+    <script>
+        document.addEventListener('htmx:configRequest', (event) => {
+            event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+        });
+    </script>
 </body>
 </html>
